--- a/02.html
+++ b/02.html
@@ -26,13 +26,14 @@
 
     <main class="flex-grow">
       <section class="my-8">
-        <h2 class="text-4xl mb-4">ECLIPSE / KARONT</h2>
-        <h4>Creative directon / Direction for Karont</h4>
-        <p class="text-black mb-4">
+        <h4 class="h4-h4">Creative Direction & Direction for:</h4>
+        <h2 class="h2-h2">ECLIPSE / KARONT</h2>
+        
+        <p class="p-p">
           Through this piece for Karont's OutKast collection, we follow the emotional journey of a man as he
           confronts his fears and difficult moments to ultimately find relief.
         </p>
-        <p class="text-black">
+        <p class="p-p">
           Immersed in an inner journey, he faces his fears and overcomes obstacles, using virtual production
           to create immersive landscapes and sets that enhance the narrative of the piece.
         </p>
@@ -41,34 +42,34 @@
           <div class="slide vertical active">
             <img src="proyectos/FOTOS WEB/02 ECLIPSE KARONT/8P2A8683-gigapixel-art-scale-0_50x.jpg" alt="Imagen Vertical">
           </div>
-          <div class="slide">
+          <div class="slide horizontal">
               <img src="proyectos/FOTOS WEB/02 ECLIPSE KARONT/000016-2-gigapixel-art-scale-0_50x.jpg" alt="Imagen Horizontal">
           </div>
-          <div class="slide">
+          <div class="slide horizontal">
             <img src="proyectos/FOTOS WEB/02 ECLIPSE KARONT/10-gigapixel-art-scale-0_50x.jpg" alt="Imagen Horizontal">
           </div>
-          <div class="slide">
+          <div class="slide horizontal">
             <img src="proyectos/FOTOS WEB/02 ECLIPSE KARONT/13-gigapixel-art-scale-0_50x.jpg" alt="Imagen Horizontal">
           </div>
-          <div class="slide">
+          <div class="slide horizontal">
             <img src="proyectos/FOTOS WEB/02 ECLIPSE KARONT/14-gigapixel-art-scale-0_50x.png" alt="Imagen Horizontal">
           </div>
-          <div class="slide">
+          <div class="slide horizontal">
             <img src="proyectos/FOTOS WEB/02 ECLIPSE KARONT/2-gigapixel-art-scale-0_50x.jpg" alt="Imagen Horizontal">
           </div>
-          <div class="slide">
+          <div class="slide horizontal">
             <img src="proyectos/FOTOS WEB/02 ECLIPSE KARONT/4-gigapixel-art-scale-0_50x.jpg" alt="Imagen Horizontal">
           </div>
-          <div class="slide">
+          <div class="slide horizontal">
               <img src="proyectos/FOTOS WEB/02 ECLIPSE KARONT/6-gigapixel-art-scale-0_50x.jpg" alt="Imagen Horizontal">
           </div>
-          <div class="slide">
+          <div class="slide horizontal">
             <img src="proyectos/FOTOS WEB/02 ECLIPSE KARONT/8-gigapixel-art-scale-0_50x.jpg" alt="Imagen Horizontal">
           </div>
-          <div class="slide">
+          <div class="slide horizontal">
             <img src="proyectos/FOTOS WEB/02 ECLIPSE KARONT/8P2A8478-gigapixel-art-scale-0_50x.jpg" alt="Imagen Horizontal">
           </div>
-          <div class="slide">
+          <div class="slide horizontal">
             <img src="proyectos/FOTOS WEB/02 ECLIPSE KARONT/8P2A9267-1-gigapixel-art-scale-0_50x.jpg" alt="Imagen Horizontal">
           </div>
 
@@ -85,7 +86,7 @@
       </div> -->
 
       <section class="my-8">
-        <h3 class="text-2xl mb-4">Credits:</h3>
+        <h4 class="h4-h4">Credits:</h4>
         <div class="credits-grid text-black">
           <div class="credit-column">
             <p>Production: @retinacontents</p>
