--- a/03.html
+++ b/03.html
@@ -27,14 +27,15 @@
 
     <main class="flex-grow">
       <section class="my-8">
-        <h2 class="text-4xl mb-4">TOTAL REWARDS CREDIT CARD / XCELIRATE</h2>
-        <h4>Direction and Production for Xcelirate</h4>
-        <p class="text-black mb-4">
+        <h4 class="h4-h4">Creative Direction / Direction & Production for:</h4>
+        <h2 class="h2-h2">TOTAL REWARDS CREDIT CARD / XCELIRATE</h2>
+        
+        <p class="p-p">
           Piece for Xcelirate. Introducing the Total Rewards Credit Card by Xcelirate, designed to offer additional benefits to its employees beyond their base salary. With the Total Rewards Credit Card, Xcelirate
           employees can enjoy a wide range of experiences and hobbies, ensuring that their team can lead a
           fulfilling life outside of work.
         </p>
-        <p class="text-black">
+        <p class="p-p">
           With this card, Xcelirate demonstrates its commitment to offering more than just a paycheck, providing employees with the opportunity to enjoy additional experiences and improve their quality of life.
         </p>
 
@@ -75,7 +76,7 @@
       </div>
 
       <section class="my-8">
-        <h3 class="text-2xl mb-4">Credits:</h3>
+        <h4 class="h4-h4">Credits:</h4>
         <div class="credits-grid text-black">
           <div class="credit-column">
             <p>Production: KinkiFactory</p>
@@ -108,13 +109,13 @@
             <p>Art Ass.: Jose A. Pueyo</p>
             <p>Atrezzo: Juan Cervera</p>
             <p>Starring:</p>
-            <ul>
-              <li>Jairo</li>
-              <li>Laia</li>
-              <li>Tarik</li>
-              <li>Joao</li>
-              <li>Alekse</li>
-            </ul>
+            <p>
+              Jairo
+              Laia
+              Tarik
+              Joao
+              Alekse
+            </p>
           </div>
         </div>
       </section>      
