--- a/05.html
+++ b/05.html
@@ -80,26 +80,26 @@
           <div class="slide active">
               <img src="proyectos/FOTOS WEB/05 MAGIC PRO _ HONOR/A005C001_240207_RNKA0.jpeg" alt="Imagen Horizontal">
           </div>
-          <div class="slide">
+          <div class="slide horizontal">
             <img src="proyectos/FOTOS WEB/05 MAGIC PRO _ HONOR/Honor_Blua_Boxeo_422.jpg" alt="Imagen Horizontal">
           </div>
-          <div class="slide">
+          <div class="slide horizontal">
             <img src="proyectos/FOTOS WEB/05 MAGIC PRO _ HONOR/Honor_Blua_Boxeo_533.jpg" alt="Imagen Horizontal">
           </div>
-          <div class="slide">
+          <div class="slide horizontal">
             <img src="proyectos/FOTOS WEB/05 MAGIC PRO _ HONOR/Honor_Blua_City_045.jpg" alt="Imagen Horizontal">
           </div>
-          <div class="slide">
+          <div class="slide horizontal">
             <img src="proyectos/FOTOS WEB/05 MAGIC PRO _ HONOR/Honor_Blua_City_101.jpg" alt="Imagen Horizontal">
           </div>
-          <div class="slide">
+          <div class="slide horizontal">
             <img src="proyectos/FOTOS WEB/05 MAGIC PRO _ HONOR/Honor_Blua_City_122-2.jpg" alt="Imagen Horizontal">
           </div>
           
       </div>
 
       <section class="my-8">
-        <h4 class="h4-h4">Credits:</h4>
+        <h4 class="h4-h4">Credits:</h4> 
         <div class="credits-grid">
           <div class="credit-column">
             <p>Production: Blua</p>
