--- a/19.html
+++ b/19.html
@@ -28,14 +28,12 @@
 
     <main class="flex-grow">
       <section class="my-8">
-        <h2 class="h2-h2">BORN YESTERDAY / ARCA SIA</h2>
-        <h4 class="h2-h2">Directed and produced for Arca</h4>
-        <p class="p-p">
-          Arca ft. Sia - Born Yesterday
-        </p>
+        <h4 class="h4-h4">Creative Direction / Direction & Production for:</h4>
+        <h2 class="h2-h2">BORN YESTERDAY / ARCA ft . SIA</h2>
+
         <p class="p-p">
           Raw piece surged with emotion about heartbreak , we are forced to take strength from the deepest
-          part of our hearts to keep moving forward
+          part of our hearts to keep moving forward.
         </p>
         
         <div class="custom-slider">
@@ -59,7 +57,7 @@
       </div>
 
       <section class="my-8">
-        <h3 class="h2-h2">Creditos:</h3>
+        <h4 class="h4-h4">Credits:</h4>
         <div class="credits-grid text-black">
           <div class="credit-column">
             <p>Direction and production: @kinkifactory</p>
@@ -82,10 +80,10 @@
             <p>Runner: @tu.dale</p>
           </div>
         </div>
-      
-        <h3 class="h2-h2">Thanks to:</h3>
+
         <div class="credits-grid text-black">
           <div class="credit-column">
+            <p>Thanks to:</p>
             <p>@dani17_alegria</p>
             <p>@xlrecordings</p>
             <p>@moonlightbarcelona</p>
