--- a/20.html
+++ b/20.html
@@ -31,12 +31,10 @@
 
     <main class="flex-grow">
       <section class="my-8">
-        <h2 class="text-4xl mb-4">TECHO / CIUTAT feat CHICO BLANCO</h2>
-        <h4>Directed and produced for Ciutat feat. ChicoBlanco</h4>
-        <p class="text-black mb-4">
-          Ciutat feat. ChicoBlanco - Techo
-        </p>
-        <p class="text-black">
+        <h4 class="h4-h4">Creative Direction / Direction & Production for:</h4>
+        <h2 class="h2-h2">TECHO / CIUTAT ft . CHICO BLANCO</h2>
+  
+        <p class="p-p">
           Surreal situations where the members of Ciutat (Jp Sunshine and Guim) coexist with an alter ego as
           a puppet, who reproduce the actions they do in real life and where each situation is more surreal
           than the previous one. Representing that moment when they are awake to/can't go to sleep after a
@@ -94,7 +92,7 @@
       </div>
 
       <section class="my-8">
-        <h3 class="text-2xl mb-4">Creditos:</h3>
+        <h4 class="h4-h4">Credits:</h4>
         <div class="credits-grid text-black">
           <div class="credit-column">
             <p>Con la supervisión de: @guillermoaliaga & @pedrotrivinofabro @kinkifactory</p>
@@ -111,10 +109,10 @@
             <p>Encoloradora: @enyarodriguez</p>
           </div>
         </div>
-      
-        <h3 class="text-2xl mt-4 mb-4">Esto no habría sido posible sin:</h3>
+
         <div class="credits-grid text-black">
           <div class="credit-column">
+            <p>Esto no habría sido posible sin:</p>
             <p>Marc Canals</p>
             <p>Bibi Coll</p>
             <p>Elisabet Pareta</p>
