--- a/21.html
+++ b/21.html
@@ -60,23 +60,24 @@
 
     <main class="flex-grow">
       <section class="my-8">
-        <h2 class="text-4xl mb-4">YALLO IS MORE / YALLO</h2>
-        <h4>Directed for Yallo</h4>
-        <p class="text-black mb-4">
+        <h4 class="h4-h4">Direction for:</h4>
+        <h2 class="h2-h2">YALLO IS MORE / YALLO</h2>
+
+        <p class="p-p">
           Yallo is telco provider. Let’s show people what we are all about and what we have to offer as a full
           digital telco with our finger on the pulse of today .
         </p>
-        <p class="text-black">
+        <p class="p-p">
           Yallo is sometimes internety, sometimes funny, sometimes serious, sometimes young, sometimes
           more adult.
         </p>
-        <p class="text-black">
+        <p class="p-p">
           But always striking, agile, simple and direct.
         </p>
-        <p class="text-black">
+        <p class="p-p">
           Yallo connects people through devices
         </p>
-        <p class="text-black">
+        <p class="p-p">
           This is why we use the screen of the devices as the connection between the scenes (people).
         </p>
         
@@ -111,7 +112,7 @@
       </div>
 
       <section class="my-8">
-        <h3 class="text-2xl mb-4">Creditos:</h3>
+        <h4 class="h4-h4">Credits:</h4>
         <div class="credits-grid text-black">
           <div class="credit-column">
             <p>Directors: @pedrotrivinofabro @guillermoaliaga</p>
