--- a/22.html
+++ b/22.html
@@ -28,12 +28,13 @@
 
     <main class="flex-grow">
       <section class="my-8">
-        <h2 class="text-4xl mb-4">3 KATAS / CHICOBLANCO ft SOTO ASA</h2>
-        <h4>Written, directed & produced for Chico Blanco & Soto Asa</h4>
-        <p class="text-black mb-4">
+        <h4 class="h4-h4">Creative Direction / Direction & Production for:</h4>
+        <h2 class="h2-h2">3 KATAS / CHICOBLANCO ft . SOTO ASA</h2>
+
+        <p class="p-p">
           3Katas is the first single from Chico Blanco & Soto Asa album.
         </p>
-        <p class="text-black">
+        <p class="p-p">
           A perfect mix of personalities to the rhythm of breakbeat fusing the house style of Chico Blanco and
           trap / reggaeton vibe of Soto Asa.
         </p>
@@ -100,7 +101,7 @@
       </div>
 
       <section class="my-8">
-        <h3 class="text-2xl mb-4">Creditos:</h3>
+        <h4 class="h4-h4">Credits:</h4>
         <div class="credits-grid text-black">
           <div class="credit-column">
             <p>@chicoblanchicoblanco & @999.asa</p>
@@ -123,16 +124,16 @@
           </div>
         </div>
       
-        <h3 class="text-2xl mt-4 mb-4">Starring:</h3>
         <div class="credits-grid text-black">
           <div class="credit-column">
+            <p>Starring:</p>
             <p>@chicoblanchicoblanco, @999.asa @8kito0o & @_karpio_</p>
           </div>
         </div>
-      
-        <h3 class="text-2xl mt-4 mb-4">Thanks to:</h3>
+
         <div class="credits-grid text-black">
           <div class="credit-column">
+            <p>Thanks to:</p>
             <p>@despegando_industrialcopera</p>
             <p>@jagger.noon</p>
           </div>
