--- a/04.html
+++ b/04.html
@@ -27,12 +27,12 @@
 
     <main class="flex-grow">
       <section class="my-8">
-        <h2 class="text-4xl mb-4">RISPETTA LA PIZZA / CANPIZZA</h2>
-        <h4>Creativity, direction and production for Can Pizza</h4>
-        <p class="text-black mb-4">
+        <h4 class="h4-h4">Direction & Production for:</h4>
+        <h2 class="h2-h2">RISPETTA LA PIZZA / CANPIZZA</h2>
+        <p class="p-p">
           Can pizza is one of the best pizzerias in Spain, perfecting the art of the dough to the point of delirium.
         </p>
-        <p class="text-black">
+        <p class="p-p">
           With this campaign we narrate the fictional story of Shiplu, a young man from Bangladesh, who
           dreams of becoming a pizzaiolo. His passion for Italian culture and pizza drives him to pursue his
           dream. With determination and respect for Italian tradition, Shiplu never loses faith in himself and
@@ -44,28 +44,28 @@
           <div class="slide active">
               <img src="proyectos/FOTOS WEB/04 RISPETTA LA PIZZA _ CAN PIZZA/CAN-PIZZA-V5-PRORES-4444XQ-Copy-01.00_00_22_09.Still003.png" alt="Imagen Horizontal">
           </div>
-          <div class="slide">
+          <div class=" slide horizontal">
             <img src="proyectos/FOTOS WEB/04 RISPETTA LA PIZZA _ CAN PIZZA/CAN-PIZZA-V5-PRORES-4444XQ-Copy-01.00_00_34_05.Still004.png" alt="Imagen Horizontal">
           </div>
-          <div class="slide">
+          <div class=" slide horizontal">
             <img src="proyectos/FOTOS WEB/04 RISPETTA LA PIZZA _ CAN PIZZA/CAN-PIZZA-V5-PRORES-4444XQ-Copy-01.00_00_51_16.Still005.png" alt="Imagen Horizontal">
           </div>
-          <div class="slide">
+          <div class=" slide horizontal">
             <img src="proyectos/FOTOS WEB/04 RISPETTA LA PIZZA _ CAN PIZZA/CAN-PIZZA-V5-PRORES-4444XQ-Copy-01.00_01_01_18.Still007.png" alt="Imagen Horizontal">
           </div>
-          <div class="slide">
+          <div class=" slide horizontal">
             <img src="proyectos/FOTOS WEB/04 RISPETTA LA PIZZA _ CAN PIZZA/CAN-PIZZA-V5-PRORES-4444XQ-Copy-01.00_01_23_16.Still010.png" alt="Imagen Horizontal">
           </div>
-          <div class="slide">
+          <div class=" slide horizontal">
             <img src="proyectos/FOTOS WEB/04 RISPETTA LA PIZZA _ CAN PIZZA/CAN-PIZZA-V5-PRORES-4444XQ-Copy-01.00_01_26_24.Still009.png" alt="Imagen Horizontal">
           </div>
-          <div class="slide">
+          <div class=" slide horizontal">
               <img src="proyectos/FOTOS WEB/04 RISPETTA LA PIZZA _ CAN PIZZA/CAN-PIZZA-V5-PRORES-4444XQ-Copy-01.00_01_39_01.Still011.png" alt="Imagen Horizontal">
           </div>
-          <div class="slide">
+          <div class=" slide horizontal">
             <img src="proyectos/FOTOS WEB/04 RISPETTA LA PIZZA _ CAN PIZZA/CAN-PIZZA-V5-PRORES-4444XQ-Copy-01.00_01_59_06.Still013.png" alt="Imagen Horizontal">
           </div>
-          <div class="slide">
+          <div class=" slide horizontal">
             <img src="proyectos/FOTOS WEB/04 RISPETTA LA PIZZA _ CAN PIZZA/CAN-PIZZA-V5-PRORES-4444XQ-Copy-01.00_02_04_14.Still014.png" alt="Imagen Horizontal">
           </div>
           
@@ -73,7 +73,7 @@
         
 
       <section class="my-8">
-        <h3 class="text-2xl mb-4">Credits:</h3>
+        <h4 class="h4-h4">Credits:</h4>
         <div class="credits-grid text-black">
           <div class="credit-column">
             <p>Writted by: @pedrotrivinofabro, @guillermoaliaga & Isaac Aliaga</p>
