--- a/03.html
+++ b/03.html
@@ -39,41 +39,42 @@
           With this card, Xcelirate demonstrates its commitment to offering more than just a paycheck, providing employees with the opportunity to enjoy additional experiences and improve their quality of life.
         </p>
 
-        <!-- Contenedor para las imágenes -->
-        <div class="custom-image-grid">
-          <div class="image-container">
-            <img src="proyectos/FOTOS WEB/03 TOTAL REWARDS CREDIT CARD _ XCELIRATE/3-gigapixel-art-scale-0_50x.jpg" alt="Imagen 1" class="w-100 h-100">
+        <div class="custom-slider">
+          <div class="slide vertical active">
+            <img src="proyectos/FOTOS WEB/03 TOTAL REWARDS CREDIT CARD _ XCELIRATE/BK3A7033-gigapixel-art-scale-0_50x-art-scale-0_50x-gigapixel.png" alt="Imagen Vertical">
           </div>
-          <div class="image-container">
-            <!-- <img src="images/DSC_0008.JPG" alt="Imagen 2" class="w-100 h-100"> -->
+          <div class="slide horizontal">
+            <img src="proyectos/FOTOS WEB/03 TOTAL REWARDS CREDIT CARD _ XCELIRATE/000011-gigapixel-art-scale-0_50x.jpg" alt="Imagen Horizontal">
           </div>
-          <div class="image-container">
-            <!-- <img src="images/DSC_0994.JPG" alt="Imagen 3" class="w-100 h-100"> -->
+          <div class="slide horizontal">
+            <img src="proyectos/FOTOS WEB/03 TOTAL REWARDS CREDIT CARD _ XCELIRATE/000027-gigapixel-art-scale-0_50x.jpg" alt="Imagen Horizontal">
           </div>
-          <div class="image-container">
-            <img src="proyectos/FOTOS WEB/03 TOTAL REWARDS CREDIT CARD _ XCELIRATE/4-gigapixel-art-scale-0_50x.jpg" alt="Imagen 4" class="w-100 h-100">
+          <div class="slide horizontal">
+            <img src="proyectos/FOTOS WEB/03 TOTAL REWARDS CREDIT CARD _ XCELIRATE/10-gigapixel-art-scale-0_50x.jpg" alt="Imagen Horizontal">
           </div>
-          <div class="image-container">
-            <img src="proyectos/FOTOS WEB/03 TOTAL REWARDS CREDIT CARD _ XCELIRATE/13-gigapixel-art-scale-0_50x.jpg" alt="Imagen 1" class="w-100 h-100">
+          <div class="slide horizontal">
+            <img src="proyectos/FOTOS WEB/03 TOTAL REWARDS CREDIT CARD _ XCELIRATE/13-gigapixel-art-scale-0_50x.jpg" alt="Imagen Horizontal">
           </div>
-          <div class="image-container">
-            <!-- <img src="images/DSC_0008.JPG" alt="Imagen 2" class="w-100 h-100"> -->
+          <div class="slide horizontal">
+            <img src="proyectos/FOTOS WEB/03 TOTAL REWARDS CREDIT CARD _ XCELIRATE/14.jpg" alt="Imagen Horizontal">
           </div>
-          <div class="image-container">
-            <!-- <img src="images/DSC_0994.JPG" alt="Imagen 3" class="w-100 h-100"> -->
+          <div class="slide horizontal">
+            <img src="proyectos/FOTOS WEB/03 TOTAL REWARDS CREDIT CARD _ XCELIRATE/17-gigapixel-art-scale-0_50x.jpg" alt="Imagen Horizontal">
           </div>
-          <div class="image-container">
-            <img src="proyectos/FOTOS WEB/03 TOTAL REWARDS CREDIT CARD _ XCELIRATE/14.jpg" alt="Imagen 4" class="w-100 h-100">
+          <div class="slide horizontal">
+            <img src="proyectos/FOTOS WEB/03 TOTAL REWARDS CREDIT CARD _ XCELIRATE/3-gigapixel-art-scale-0_50x.jpg" alt="Imagen Horizontal">
+          </div>
+          <div class="slide horizontal">
+            <img src="proyectos/FOTOS WEB/03 TOTAL REWARDS CREDIT CARD _ XCELIRATE/4-gigapixel-art-scale-0_50x.jpg" alt="Imagen Horizontal">
+          </div>
+          <div class="slide horizontal">
+            <img src="proyectos/FOTOS WEB/03 TOTAL REWARDS CREDIT CARD _ XCELIRATE/BK3A6198-gigapixel-art-scale-0_50x.jpg" alt="Imagen Horizontal">
+          </div>
+          <div class="slide horizontal">
+            <img src="proyectos/FOTOS WEB/03 TOTAL REWARDS CREDIT CARD _ XCELIRATE/BK3A7088-1-gigapixel-art-scale-0_50x.jpg" alt="Imagen Horizontal">
           </div>
         </div>
-      </section>
-      <!-- <div><p class="text-black">
-        This initiative goes beyond traditional fashion campaigns by merging creativity with a powerful social message. Through bold visuals and innovative storytelling, we sought to spark conversations about the environmental impact of the fashion industry. The collaboration with Moises Nieto highlights the beauty and potential of repurposed materials, inspiring a shift towards a more conscious and sustainable way of living.
-      </p></div> -->
-
-      <div class="image-container-work-final">
-        <img src="proyectos/FOTOS WEB/03 TOTAL REWARDS CREDIT CARD _ XCELIRATE/10-gigapixel-art-scale-0_50x.jpg" alt="Imagen 1" class="w-100 h-100">
-      </div>
+          
 
       <section class="my-8">
         <h4 class="h4-h4">Credits:</h4>
