--- a/06.html
+++ b/06.html
@@ -43,39 +43,71 @@
           the true expression of love.
         </p>
 
-        <!-- Contenedor para las imágenes -->
-        <div class="custom-image-grid">
-          <div class="image-container">
-            <img src="proyectos/FOTOS WEB/06 CUATRO BODAS _ LUNA KI/lunaki_1.1.23020124.png" alt="Imagen 1" class="w-100 h-100">
+        <div class="custom-slider">
+          <div class="slide vertical active">
+            <img src="proyectos/FOTOS WEB/06 CUATRO BODAS _ LUNA KI/INZO.PNG--IMG_2870-gigapixel-art-scale-0_50x.jpg" alt="Imagen Vertical">
           </div>
-          <div class="image-container">
-            <!-- <img src="images/DSC_0008.JPG" alt="Imagen 2" class="w-100 h-100"> -->
+          <div class="slide horizontal">
+            <img src="proyectos/FOTOS WEB/06 CUATRO BODAS _ LUNA KI/INZO.PNG--IMG_2811-gigapixel-art-scale-0_50x.jpg" alt="Imagen Horizontal">
           </div>
-          <div class="image-container">
-            <!-- <img src="images/DSC_0994.JPG" alt="Imagen 3" class="w-100 h-100"> -->
+          <div class="slide horizontal">
+            <img src="proyectos/FOTOS WEB/06 CUATRO BODAS _ LUNA KI/INZO.PNG--IMG_2964-gigapixel-art-scale-0_50x.jpg" alt="Imagen Horizontal">
           </div>
-          <div class="image-container">
-            <img src="proyectos/FOTOS WEB/06 CUATRO BODAS _ LUNA KI/lunaki_1.1.12020124.png" alt="Imagen 4" class="w-100 h-100">
+          <div class="slide horizontal">
+            <img src="proyectos/FOTOS WEB/06 CUATRO BODAS _ LUNA KI/INZO.PNG--IMG_3013-gigapixel-art-scale-0_50x.jpg" alt="Imagen Horizontal">
           </div>
-          <div class="image-container">
-            <img src="proyectos/FOTOS WEB/06 CUATRO BODAS _ LUNA KI/lunaki_1.1.13020124.png" alt="Imagen 1" class="w-100 h-100">
+          <div class="slide horizontal">
+            <img src="proyectos/FOTOS WEB/06 CUATRO BODAS _ LUNA KI/INZO.PNG--IMG_3057-gigapixel-art-scale-0_50x.jpg" alt="Imagen Horizontal">
           </div>
-          <div class="image-container">
-            <!-- <img src="images/DSC_0008.JPG" alt="Imagen 2" class="w-100 h-100"> -->
+          <div class="slide horizontal">
+            <img src="proyectos/FOTOS WEB/06 CUATRO BODAS _ LUNA KI/lunaki_1.1.11020124.png" alt="Imagen Horizontal">
           </div>
-          <div class="image-container">
-            <!-- <img src="images/DSC_0994.JPG" alt="Imagen 3" class="w-100 h-100"> -->
+          <div class="slide horizontal">
+            <img src="proyectos/FOTOS WEB/06 CUATRO BODAS _ LUNA KI/lunaki_1.1.12020124.png" alt="Imagen Horizontal">
           </div>
-          <div class="image-container">
-            <img src="proyectos/FOTOS WEB/06 CUATRO BODAS _ LUNA KI/LunaKi_KinkiFactory_FelipeHernandez_DSCF4113.jpg" alt="Imagen 4" class="w-100 h-100">
+          <div class="slide horizontal">
+            <img src="proyectos/FOTOS WEB/06 CUATRO BODAS _ LUNA KI/lunaki_1.1.13020124.png" alt="Imagen Horizontal">
+          </div>
+          <div class="slide horizontal">
+            <img src="proyectos/FOTOS WEB/06 CUATRO BODAS _ LUNA KI/lunaki_1.1.14020124.png" alt="Imagen Horizontal">
+          </div>
+          <div class="slide horizontal">
+            <img src="proyectos/FOTOS WEB/06 CUATRO BODAS _ LUNA KI/lunaki_1.1.23020124.png" alt="Imagen Horizontal">
+          </div>
+          <div class="slide horizontal">
+            <img src="proyectos/FOTOS WEB/06 CUATRO BODAS _ LUNA KI/lunaki_1.1.24020124.png" alt="Imagen Horizontal">
+          </div>
+          <div class="slide horizontal">
+            <img src="proyectos/FOTOS WEB/06 CUATRO BODAS _ LUNA KI/lunaki_1.1.3020124.png" alt="Imagen Horizontal">
+          </div>
+          <div class="slide horizontal">
+            <img src="proyectos/FOTOS WEB/06 CUATRO BODAS _ LUNA KI/lunaki_1.1.6020124.png" alt="Imagen Horizontal">
+          </div>
+          <div class="slide horizontal">
+            <img src="proyectos/FOTOS WEB/06 CUATRO BODAS _ LUNA KI/lunaki_1.1.7020124.png" alt="Imagen Horizontal">
+          </div>
+          <div class="slide horizontal">
+            <img src="proyectos/FOTOS WEB/06 CUATRO BODAS _ LUNA KI/lunaki_1.1.8020124.png" alt="Imagen Horizontal">
+          </div>
+          <div class="slide horizontal">
+            <img src="proyectos/FOTOS WEB/06 CUATRO BODAS _ LUNA KI/lunaki_1.1.9020124.png" alt="Imagen Horizontal">
+          </div>
+          <div class="slide horizontal">
+            <img src="proyectos/FOTOS WEB/06 CUATRO BODAS _ LUNA KI/LunaKi_KinkiFactory_FelipeHernandez_DSCF4113.jpg" alt="Imagen Horizontal">
+          </div>
+          <div class="slide horizontal">
+            <img src="proyectos/FOTOS WEB/06 CUATRO BODAS _ LUNA KI/LunaKi_KinkiFactory_FelipeHernandez_DSCF4132.jpg" alt="Imagen Horizontal">
+          </div>
+          <div class="slide horizontal">
+            <img src="proyectos/FOTOS WEB/06 CUATRO BODAS _ LUNA KI/LunaKi_KinkiFactory_FelipeHernandez_DSCF4136.jpg" alt="Imagen Horizontal">
+          </div>
+          <div class="slide horizontal">
+            <img src="proyectos/FOTOS WEB/06 CUATRO BODAS _ LUNA KI/LunaKi_KinkiFactory_FelipeHernandez_DSCF4188.jpg" alt="Imagen Horizontal">
+          </div>
+          <div class="slide horizontal">
+            <img src="proyectos/FOTOS WEB/06 CUATRO BODAS _ LUNA KI/LunaKi_KinkiFactory_FelipeHernandez_DSCF4224.jpg" alt="Imagen Horizontal">
           </div>
         </div>
-      </section>
-      
-
-      <div class="image-container-work-final">
-        <img src="proyectos/FOTOS WEB/06 CUATRO BODAS _ LUNA KI/lunaki_1.1.11020124.png" alt="Imagen 1" class="w-100 h-100">
-      </div>
       
       <section class="my-8">
         <h4 class="h4-h4">Credits:</h4>
