--- a/07.html
+++ b/07.html
@@ -39,42 +39,27 @@
           Italy and Spain.
         </p>
 
-        <!-- Contenedor para las imágenes -->
-        <div class="custom-image-grid">
-          <div class="image-container">
-            <img src="proyectos/FOTOS WEB/07 NUDE PROJECT & 545/Captura-de-pantalla-2024-01-16-104114.png" alt="Imagen 1" class="w-100 h-100">
+        <div class="custom-slider">
+          <div class="slide vertical active">
+            <img src="proyectos/FOTOS WEB/07 NUDE PROJECT & 545/Captura-de-pantalla-2024-01-16-104114.png" alt="Imagen Vertical">
           </div>
-          <div class="image-container">
-            <!-- <img src="images/DSC_0008.JPG" alt="Imagen 2" class="w-100 h-100"> -->
+          <div class="slide vertical">
+            <img src="proyectos/FOTOS WEB/07 NUDE PROJECT & 545/Captura-de-pantalla-2024-01-16-104225.png" alt="Imagen Vertical">
           </div>
-          <div class="image-container">
-            <!-- <img src="images/DSC_0994.JPG" alt="Imagen 3" class="w-100 h-100"> -->
+          <div class="slide vertical">
+            <img src="proyectos/FOTOS WEB/07 NUDE PROJECT & 545/Captura-de-pantalla-2024-01-16-104253.png" alt="Imagen Vertical">
           </div>
-          <div class="image-container">
-            <img src="proyectos/FOTOS WEB/07 NUDE PROJECT & 545/Captura-de-pantalla-2024-01-16-104225.png" alt="Imagen 4" class="w-100 h-100">
+          <div class="slide vertical">
+            <img src="proyectos/FOTOS WEB/07 NUDE PROJECT & 545/Captura-de-pantalla-2024-01-16-104325.png" alt="Imagen Vertical">
           </div>
-          <div class="image-container">
-            <img src="proyectos/FOTOS WEB/07 NUDE PROJECT & 545/Captura-de-pantalla-2024-01-16-104325.png" alt="Imagen 1" class="w-100 h-100">
+          <div class="slide vertical">
+            <img src="proyectos/FOTOS WEB/07 NUDE PROJECT & 545/Captura-de-pantalla-2024-01-16-104640.png" alt="Imagen Vertical">
           </div>
-          <div class="image-container">
-            <!-- <img src="images/DSC_0008.JPG" alt="Imagen 2" class="w-100 h-100"> -->
-          </div>
-          <div class="image-container">
-            <!-- <img src="images/DSC_0994.JPG" alt="Imagen 3" class="w-100 h-100"> -->
-          </div>
-          <div class="image-container">
-            <img src="proyectos/FOTOS WEB/07 NUDE PROJECT & 545/Captura-de-pantalla-2024-01-16-104640.png" alt="Imagen 4" class="w-100 h-100">
+          <div class="slide vertical">
+            <img src="proyectos/FOTOS WEB/07 NUDE PROJECT & 545/Captura-de-pantalla-2024-01-16-104706.png" alt="Imagen Vertical">
           </div>
         </div>
-      </section>
-      <!-- <div><p class="text-black">
-        "Cuatro Bodas" becomes an anthem of liberation and resistance in a world that seeks to suppress
-        the true expression of love.
-      </p></div> -->
-
-      <div class="image-container-work-final">
-        <img src="proyectos/FOTOS WEB/07 NUDE PROJECT & 545/Captura-de-pantalla-2024-01-16-104253.png" alt="Imagen 1" class="w-100 h-100">
-      </div>
+          
       
       <section class="my-8">
         <h4 class="h4-h4">Credits:</h4> 
