--- a/11.html
+++ b/11.html
@@ -69,6 +69,7 @@
           <div class="slide horizontal">
             <img src="proyectos/FOTOS WEB/11 LEMON SODA/L1005163r-gigapixel-art-scale-0_20x.JPG" alt="Imagen Horizontal">
           </div>
+        </div>
 
           
       
