--- a/08.html
+++ b/08.html
@@ -47,6 +47,7 @@
           <div class="slide horizontal">
             <img src="proyectos/FOTOS WEB/08 TAZAS _ MCDONALS/Captura-de-pantalla-2023-10-24-113039.png" alt="Imagen Horizontal">
           </div>
+        </div>
       
       <section class="my-8">
         <h4 class="h4-h4">Credits:</h4> 
