--- a/footer.html
+++ b/footer.html
@@ -13,7 +13,7 @@
         <a href="https://www.linkedin.com/in/kinkifactory/?originalSubdomain=es" target="_blank" title="LinkedIn">(LI)</a>
     </div>
     <div class="left-group foot3">
-        <div><img src="images/LOGO_Mesa de trabajo 1 copia.png" alt="piojo"></div>
+        <div><img src="images/animacion.gif" alt="piojo"></div>
         <div class="foot3">MAD/BCN/CDMX</div>
     </div>
 </footer>
