--- a/header.html
+++ b/header.html
@@ -1,7 +1,7 @@
 <header>
   <div class="header-logo-images">
     <img src="images/LOGO_Mesa de trabajo 1.png" alt="Pedro Trivino Logo" class="logo">
-    <img src="images/LOGO_Mesa de trabajo 1 copia.png" alt="Pedro Trivino Logo" class="logo">
+    <img src="images/animacion.gif" alt="Pedro Trivino Logo" class="logo">
   </div>
   <div class="header-font">
     <a href="index.html">WORK</a>
