--- a/header.html
+++ b/header.html
@@ -1,12 +1,12 @@
 <header>
   <div class="header-logo-images">
-    <img src="images/LOGO_Mesa de trabajo 1.png" alt="Pedro Trivino Logo" class="logo">
+    <a href="index.html"><img src="images/LOGO_Mesa de trabajo 1.png" alt="Pedro Trivino Logo" class="logo"></a>
     <img src="images/animacion.gif" alt="Pedro Trivino Logo" class="logo">
   </div>
   <div class="header-font">
     <a href="index.html">WORK</a>
     <a href="about.html">ABOUT</a>
-    <a href="mailto:pedrotrivinofabro@gmail.com">CONTACT</a>
+    <a href="mailto:kumocreativecollective@gmail.com">CONTACT</a>
   </div>
 </header>
 
