--- a/about.html
+++ b/about.html
@@ -18,7 +18,8 @@
       <!-- <img src="../images/foto prueba fondo_Mesa de trabajo 1.png" alt="Imagen 1" class="w-100 h-100"> -->
       
       <section class="mb-8 position-relative overflow-hidden">
-        <div class="background-image-sello"></div>
+        <!-- <div class="background-image-sello"></div> -->
+        <div><img src="images/foto prueba fondo_Mesa de trabajo 1.png" alt="Imagen 1" class="w-100 h-100"></div>
         <div class="z-10 content-overlay">
           <h1 class="h2-h2">Pedro Triviño</h1>
           <div class="max-w-2xl">
