--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
         <!-- <div class="background-image-sello"></div> -->
         <div><img src="images/foto prueba fondo_Mesa de trabajo 1.png" alt="Imagen 1" class="w-100 h-100"></div>
         <div class="z-10 content-overlay">
-          <h1 class="h2-h2-foto">Pedro Triviño</h1>
+          <h1 class="h2-h2">Pedro Triviño</h1>
           <div class="max-w-2xl">
             <p class="p-p">
               I am a creative who’s worked across different fields, focusing mainly on audiovisual direction, where he’s really grown over the past years.
