--- a/about.html
+++ b/about.html
@@ -21,15 +21,23 @@
         <!-- <div class="background-image-sello"></div> -->
         <div><img src="images/foto prueba fondo_Mesa de trabajo 1.png" alt="Imagen 1" class="w-100 h-100"></div>
         <div class="z-10 content-overlay">
-          <h1 class="h2-h2">Pedro Triviño</h1>
+          <h1 class="h2-h2">KUMO</h1>
           <div class="max-w-2xl">
             <p class="p-p">
-              I am a creative who’s worked across different fields, focusing mainly on audiovisual direction, where he’s really grown over the past years.
-              <p class="p-p"> His job is all about bringing ideas to life in ways that fit each project, building concepts and visual stories that hit the mark every time.</p>
-              <p class="p-p">He finds inspiration in any artistic movement or anything that simply catches his eye. He’s always looking for motivation in everyday life, expressing his experiences in a way that’s both conceptual and visually striking.</p>
-              <p class="p-p">Since the beginning, he’s always been proactive, getting hands-on experience with every part of the project process—from basic roles to directing international projects. This journey has given him a well-rounded view of each project.</p>
+              KUMO better known as Pedro Triviño´s a versatile creative professional, who has explored numerous fields, with a particular focus on Creative Direction, Audiovisual Direction and Production, areas in which he has been most active in recent years.</p>
 
-      
+              <p>&nbsp;</p>
+
+              <p class="p-p">His work revolves around transforming ideas into unique projects, tailoring his approach to each client’s needs. He excels at building solid concepts and crafting visual narratives that resonate, always with a refined aesthetic touch.</p>
+
+              <p>&nbsp;</p>
+
+              <p class="p-p">KUMO draws inspiration from anything that sparks his curiosity, whether it be artistic movements or the simplest details of daily life. He consistently seeks to imbue his work with a conceptual angle while maintaining a strong visual and creative focus.</p>
+
+              <p>&nbsp;</p>
+
+              <p class="p-p">From the outset, KUMO has never shied away from giving his all. He has engaged in every stage of project development, from handling the most fundamental tasks to leading international productions. This hands-on experience has provided him with a global and practical perspective, ideal for elevating any idea to the next level.</p>
+
     </main>
 
    <!-- Incluir el footer -->
