--- a/footer.html
+++ b/footer.html
@@ -1,10 +1,10 @@
 <footer>
     <div class="foot1">Contact:</div> 
     <div class="foot2">
-        <a href="mailto:kumocreativecollective@gmail.com" title="Enviar un correo">KUMOCREATIVECOLLECTIVE@GMAIL.COM</a>
+        <a href="mailto:kumocreativeproject@gmail.com" title="Enviar un correo">KUMOCREATIVEPROJECT@GMAIL.COM</a>
     </div>
     <div class="foot2">
-        <a href="tel:+34679423753" title="Llamar">(+34) 679423753</a>
+        <a href="tel:+34679423753" title="Llamar">(+34) 679 42 37 53</a>
     </div>
     <div class="foot1">Check:</div>
     <div class="foot2">
