--- a/10.html
+++ b/10.html
@@ -39,6 +39,11 @@
         </p>
 
         <div class="custom-slider">
+
+          <button class="arrow left-arrow" onclick="moveSlide(-1)">
+            <img src="images/FLECHITAS-01.png" alt="Flecha izquierda">
+          </button>
+
           <div class="slide horizontal active">
             <img src="proyectos/FOTOS WEB/10 ALLIANZ GO!/AAO_9106-Editar-3400K-gigapixel-art-scale-0_30x.jpg" alt="Imagen Horizontal">
           </div>
@@ -57,6 +62,10 @@
           <div class="slide horizontal">
             <img src="proyectos/FOTOS WEB/10 ALLIANZ GO!/AAO_9511-Editar-3-gigapixel-art-scale-0_30x.jpg" alt="Imagen Horizontal">
           </div>
+
+          <button class="arrow right-arrow" onclick="moveSlide(1)">
+            <img src="images/FLECHITAS-02.png" alt="Flecha derecha">
+          </button>
 
           
       </div>
@@ -115,7 +124,6 @@
 
   <!-- Código JavaScript para manejar los eventos de hover y reproducir audio -->
   <script>
-
     // Función para cargar dinámicamente el contenido HTML
     function loadHTML(elementId, filePath) {
       fetch(filePath)
@@ -125,23 +133,51 @@
         })
         .catch(error => console.error('Error al cargar el archivo:', error));
     }
-
+  
     // Cargar el encabezado y pie de página
     loadHTML('header', 'header.html');
     loadHTML('footer', 'footer.html');
-
-    const slides = document.querySelectorAll('.slide');
+  
+    // Seleccionamos todas las diapositivas
+    const slides = document.querySelectorAll('.custom-slider .slide');
+  
+    // Variable para saber cuál es la diapositiva actual
     let currentSlide = 0;
+  
+    // Función para cambiar a la siguiente diapositiva
     function changeSlide() {
+      // Eliminar la clase 'active' de la diapositiva actual
       slides[currentSlide].classList.remove('active');
+      
+      // Incrementar el índice para la siguiente diapositiva
       currentSlide = (currentSlide + 1) % slides.length;
-
+  
+      // Añadir la clase 'active' a la siguiente diapositiva
       slides[currentSlide].classList.add('active');
     }
-
+  
+    // Cambiar la diapositiva cada 5 segundos (automático)
     let slideInterval = setInterval(changeSlide, 5000);
+  
+    // Agregar evento de clic para cambiar la diapositiva al hacer clic en el slider
     document.querySelector('.custom-slider').addEventListener('click', () => {
       changeSlide();  // Cambia a la siguiente diapositiva cuando se hace clic
     });
-
+  
+    // Función para mover la diapositiva (flechas)
+    let currentSlideIndex = 0; // Índice de la diapositiva actual
+    const slidesForMove = document.querySelectorAll('.custom-slider .slide');
+    const totalSlides = slidesForMove.length;
+  
+    // Función para mover la diapositiva
+    function moveSlide(direction) {
+      // Elimina la clase 'active' de la diapositiva actual
+      slidesForMove[currentSlideIndex].classList.remove('active');
+  
+      // Calcula el índice de la siguiente diapositiva
+      currentSlideIndex = (currentSlideIndex + direction + totalSlides) % totalSlides;
+  
+      // Añade la clase 'active' a la siguiente diapositiva
+      slidesForMove[currentSlideIndex].classList.add('active');
+    }
   </script>
