--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,6 @@
 <body>
     <h1>Contacto</h1>
     <p>Haz clic en el siguiente enlace para enviarme un correo:</p>
-    <a href="mailto:pedrotrivinofabro@gmail.com" style="font-size: 20px; color: red; text-decoration: none;">Contact</a>
+    <a href="mailto:kumocreativeproject@gmail.com" style="font-size: 20px; color: red; text-decoration: none;">Contact</a>
 </body>
 </html>
