--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="styles.css">
   
 </head>
-<body class="cursor">
+<body class="hola">
 
   <div class="h-screen d-flex flex-column">
     
