--- a/footer.html
+++ b/footer.html
@@ -10,7 +10,7 @@
     <div class="foot2">
         <a href="https://www.instagram.com/pedrotrivinofabro/" target="_blank" title="Instagram">(IG)</a> 
         <a href="https://vimeo.com/kinkifactory" target="_blank" title="Vimeo">(VMO)</a> 
-        <a href="https://www.linkedin.com/in/kinkifactory/?originalSubdomain=es" target="_blank" title="LinkedIn">(LI)</a>
+        <a href="https://www.linkedin.com/in/kumo-project-0b817a341/" target="_blank" title="LinkedIn">(LI)</a>
     </div>
     <div class="left-group foot3">
         <div class="left-group img"><img src="images/animacion.gif" alt="piojo"></div>
