--- a/footer.html
+++ b/footer.html
@@ -8,9 +8,9 @@
     </div>
     <div class="foot1">Check:</div>
     <div class="foot2">
-        <a href="https://www.instagram.com/pedrotrivinofabro/" target="_blank" title="Instagram">(IG)</a> 
-        <a href="https://vimeo.com/kinkifactory" target="_blank" title="Vimeo">(VMO)</a> 
-        <a href="https://www.linkedin.com/in/kumo-project-0b817a341/" target="_blank" title="LinkedIn">(LI)</a>
+        <a href="https://www.instagram.com/pedrotrivinofabro/" title="Instagram">(IG)</a> 
+        <a href="https://vimeo.com/kinkifactory"title="Vimeo">(VMO)</a> 
+        <a href="https://www.linkedin.com/in/kumo-project-0b817a341/"title="LinkedIn">(LI)</a>
     </div>
     <div class="left-group foot3">
         <div class="left-group img"><img src="images/animacion.gif" alt="piojo"></div>
